...
  AppLocalizationsEs([String locale = 'es']) : super(locale);

  @override
  String get appTitle => 'Habitus Fe';

  @override
  String get start => 'Comenzar';

  @override
  String get readBible => 'Biblia';

  @override
  String get myHabits => 'Mis Hábitos';
...
